--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -1,20 +1,25 @@
 
-name: GitHub Actions Build and Deploy Demo
-on:
-  push:
-    branches:
-      - master
-jobs:
-  build-and-deploy:
-    runs-on: ubuntu-latest
-    steps:
-    - name: Checkout
-      uses: actions/checkout@master
+name: blog deploy
 
-    - name: Build and Deploy
-      uses: JamesIves/github-pages-deploy-action@master
+on: 
+  push:
+    branches: 
+      - master
+
+jobs:
+  build-deploy:
+    runs-on: ubuntu-latest
+    
+    steps:
+    - uses: actions/checkout@v1
+    - run: npm install
+    - run: npm install vuepress
+    - run: npm run build
+    - run: cp CNAME docs/.vuepress/dist/
+    
+    - name: Deploy
+      uses: peaceiris/actions-gh-pages@v2.5.0
       env:
-        ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
-        BRANCH: github-io
-        FOLDER: build
-        BUILD_SCRIPT: npm install && npm run build
+        ACTIONS_DEPLOY_KEY: ${{secrets.ACCESS_TOKEN}}
+        PUBLISH_BRANCH: github-io
+        PUBLISH_DIR: docs/.vuepress/dist
