--- a/.github/workflows/vuepress-deploy.yml
+++ b/.github/workflows/vuepress-deploy.yml
@@ -1,25 +1,34 @@
+name: github pages
 
-name: blog deploy
-
-on: 
+on:
   push:
-    branches: 
+    branches:
       - master
 
 jobs:
-  build-deploy:
-    runs-on: ubuntu-latest
-    
+  deploy:
+    runs-on: ubuntu-18.04
     steps:
-    - uses: actions/checkout@v1
-    - run: npm install
-    - run: npm install vuepress
-    - run: npm run build
-    ## - run: cp CNAME docs/.vuepress/dist/
-    
-    - name: Deploy
-      uses: peaceiris/actions-gh-pages@v2.5.0
-      env:
-        ACTIONS_DEPLOY_KEY: ${{secrets.ACCESS_TOKEN}}
-        PUBLISH_BRANCH: github-io
-        PUBLISH_DIR: docs/.vuepress/dist
+      - uses: actions/checkout@v2
+
+      - name: Setup Node
+        uses: actions/setup-node@v1
+        with:
+          node-version: '10.x'
+
+      - name: Cache dependencies
+        uses: actions/cache@v1
+        with:
+          path: ~/.npm
+          key: ${{ runner.os }}-node-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-
+
+      - run: npm ci
+      - run: npm run build
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.ACCESS_TOKEN  }}
+          publish_dir: ./public
